{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 281,
  "lineage": "732184ef-e5e7-2821-be1f-203c28568bc8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085ed07b8c5845404",
            "arn": "arn:aws:ec2:us-west-2:941948905001:elastic-ip/eipalloc-085ed07b8c5845404",
            "association_id": "eipassoc-0f02daf08aac9d759",
            "domain": "vpc",
            "id": "eipalloc-085ed07b8c5845404",
            "instance": "i-057d867cfd4da3b4c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0943bfca4ef7efc69",
            "private_dns": "ip-20-0-1-48.us-west-2.compute.internal",
            "private_ip": "20.0.1.48",
            "public_dns": "ec2-54-213-43-12.us-west-2.compute.amazonaws.com",
            "public_ip": "54.213.43.12",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "jenkins-eip"
            },
            "tags_all": {
              "Name": "jenkins-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_instance.jenkins",
            "aws_security_group.jenkins_sg",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0a914de4dc1f18727",
            "arn": "arn:aws:ec2:us-west-2:941948905001:instance/i-057d867cfd4da3b4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-profile",
            "id": "i-057d867cfd4da3b4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i-flex.large",
            "ipv6_address_count": 0,
            "key_name": "tata-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0943bfca4ef7efc69"
              }
            ],
            "primary_network_interface_id": "eni-0943bfca4ef7efc69",
            "private_dns": "ip-20-0-1-48.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.48",
            "public_ip": "54.213.43.12",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:941948905001:key/df6b3ed7-4971-48e2-b299-b01f18088c45",
                "throughput": 125,
                "volume_id": "vol-01f897edc849f7885",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05afe4a2c8fa465dd",
            "tags": {
              "Environment": "production",
              "Name": "jenkins-server",
              "Role": "jenkins"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "jenkins-server",
              "Role": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd2360af5a93aadf"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941948905001",
            "id": "i-057d867cfd4da3b4c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_security_group.jenkins_sg",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941948905001:security-group/sg-05c3431c8d07633ae",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c3431c8d07633ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Jenkins to access EKS API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd2360af5a93aadf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg-20260408055253579100000001",
            "name_prefix": "eks-cluster-sg-",
            "owner_id": "941948905001",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bec4472137da9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941948905001",
            "id": "sg-05c3431c8d07633ae",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941948905001:security-group/sg-0d0c27691b0498fd9",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0c27691b0498fd9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c3431c8d07633ae"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow inter-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow kubelet access",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c3431c8d07633ae"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-node-sg-20260408055259979600000003",
            "name_prefix": "eks-node-sg-",
            "owner_id": "941948905001",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-sg"
            },
            "tags_all": {
              "Name": "eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bec4472137da9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941948905001",
            "id": "sg-0d0c27691b0498fd9",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.eks_cluster_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:941948905001:security-group/sg-0bd2360af5a93aadf",
            "description": "Security group for Jenkins Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd2360af5a93aadf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "49.47.216.217/32"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg-20260408055253579100000002",
            "name_prefix": "jenkins-sg-",
            "owner_id": "941948905001",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bec4472137da9cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941948905001",
            "id": "sg-0bd2360af5a93aadf",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_to_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Jenkins to access EKS API",
            "from_port": 443,
            "id": "sgrule-3934365703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-west-2",
            "security_group_id": "sg-05c3431c8d07633ae",
            "security_group_rule_id": "sgr-0faa9015cd2219eb9",
            "self": false,
            "source_security_group_id": "sg-0bd2360af5a93aadf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    }
  ]
}